force-app/main/default/objects/SPEN_Plot__c/SPEN_Plot__c.object-meta.xml
<CustomObject>
    <description>Plot object is created to store the Plot records related to a connections case</description>
    <label>Plot</label>
    <nameField>
        <displayFormat>P-{00000000}</displayFormat>
        <label>Plot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>