force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_AutoPlotNumbers__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AutoPlotNumbers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is for Connections purpose</description>
    <label>Auto Plot Numbers</label>
    <type>Checkbox</type>
</CustomField>