force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_BuildingCode__c.field-meta.xml
<CustomField>
    <fullName>SPEN_BuildingCode__c</fullName>
    <description>This field is for Connections process</description>
    <label>Building Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>