force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_BuildingName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_BuildingName__c</fullName>
    <description>This field is for Connections process.</description>
    <label>Building Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>