force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_BusinessType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_BusinessType__c</fullName>
    <description>This field is for Connections process</description>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>School</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Garage</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Gym</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>Hotel</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>Bank</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>Restaurant</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>Office</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>Coffee Shop</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>Retail</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Convenience Store</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Medical</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>