force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_BusinessTypeOther__c.field-meta.xml
<CustomField>
    <fullName>SPEN_BusinessTypeOther__c</fullName>
    <description>This field is for Connections process.</description>
    <label>Business Type (Other)</label>
    <length>60</length>
    <type>Text</type>
</CustomField>