force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_CableHeadLive__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CableHeadLive__c</fullName>
    <description>This field is for Connections process.</description>
    <label>Cable Head Live</label>
    <type>Date</type>
</CustomField>