force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_CableheadLiveScheduled__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CableheadLiveScheduled__c</fullName>
    <description>This field is for Connections process.</description>
    <label>Cablehead Live Scheduled</label>
    <type>Date</type>
</CustomField>