force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_CaseRecord__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CaseRecord__c</fullName>
    <description>This field is for SPEN Connections process</description>
    <label>Case Record</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Plots</relationshipLabel>
    <relationshipName>Plots</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>