force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_CombinedHeatandPower__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CombinedHeatandPower__c</fullName>
    <description>This field is for Connections process</description>
    <label>Combined Heat and Power</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>