force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_Country__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Country__c</fullName>
    <description>This field is for Connections process.</description>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GB</fullName>
                <label>United Kingdom</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>