force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_County__c.field-meta.xml
<CustomField>
    <fullName>SPEN_County__c</fullName>
    <description>This field is for Connections Process</description>
    <label>County</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>08</fullName>
                <label>Argyll &amp; Bute</label>
            </value>
            <value>
                <fullName>44</fullName>
                <label>Ceredigion</label>
            </value>
            <value>
                <fullName>45</fullName>
                <label>Cheshire East</label>
            </value>
            <value>
                <fullName>46</fullName>
                <label>Clackmannanshire</label>
            </value>
            <value>
                <fullName>48</fullName>
                <label>Conwy</label>
            </value>
            <value>
                <fullName>53</fullName>
                <label>Cumbria</label>
            </value>
            <value>
                <fullName>55</fullName>
                <label>Denbighshire</label>
            </value>
            <value>
                <fullName>64</fullName>
                <label>Dumfries &amp; Galloway</label>
            </value>
            <value>
                <fullName>69</fullName>
                <label>East Ayrshire</label>
            </value>
            <value>
                <fullName>70</fullName>
                <label>East Dunbartonshire</label>
            </value>
            <value>
                <fullName>72</fullName>
                <label>East Lothian</label>
            </value>
            <value>
                <fullName>73</fullName>
                <label>East Renfrewshire</label>
            </value>
            <value>
                <fullName>76</fullName>
                <label>Edinburgh</label>
            </value>
            <value>
                <fullName>82</fullName>
                <label>Falkirk</label>
            </value>
            <value>
                <fullName>84</fullName>
                <label>Fife</label>
            </value>
            <value>
                <fullName>85</fullName>
                <label>Flintshire</label>
            </value>
            <value>
                <fullName>87</fullName>
                <label>Glasgow</label>
            </value>
            <value>
                <fullName>92</fullName>
                <label>Gwynedd</label>
            </value>
            <value>
                <fullName>94</fullName>
                <label>Halton</label>
            </value>
            <value>
                <fullName>AH</fullName>
                <label>Inverclyde</label>
            </value>
            <value>
                <fullName>AI</fullName>
                <label>Isle of Anglesey</label>
            </value>
            <value>
                <fullName>AU</fullName>
                <label>Lancashire</label>
            </value>
            <value>
                <fullName>BC</fullName>
                <label>Merseyside</label>
            </value>
            <value>
                <fullName>BH</fullName>
                <label>Greater Manchester</label>
            </value>
            <value>
                <fullName>BM</fullName>
                <label>Midlothian</label>
            </value>
            <value>
                <fullName>CA</fullName>
                <label>North Ayrshire</label>
            </value>
            <value>
                <fullName>CD</fullName>
                <label>North Lanarkshire</label>
            </value>
            <value>
                <fullName>CJ</fullName>
                <label>Northumberland</label>
            </value>
            <value>
                <fullName>CT</fullName>
                <label>Perth &amp; Kinross</label>
            </value>
            <value>
                <fullName>CY</fullName>
                <label>Powys</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>