force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_Description__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Description__c</fullName>
    <description>This field is for Connections process.</description>
    <label>Description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>