force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_DISCONNECT__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DISCONNECT__c</fullName>
    <description>This field is for Connections process.</description>
    <label>DISCONNECT</label>
    <type>Date</type>
</CustomField>