force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_DisturbingLoadSummary__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DisturbingLoadSummary__c</fullName>
    <description>This field is for Connections process</description>
    <label>Disturbing Load Summary</label>
    <length>40</length>
    <type>Text</type>
</CustomField>