force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_EligibleForPlotCreation__c.field-meta.xml
<CustomField>
    <fullName>SPEN_EligibleForPlotCreation__c</fullName>
    <description>This Connections formula field is for extracting the plots &apos;Y&apos; picklist value from Case object.</description>
    <formula>TEXT(SPEN_CaseRecord__r.SPEN_Plots__c)==&apos;Y&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligible For Plot Creation</label>
    <type>Checkbox</type>
</CustomField>