force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_EnergySource__c.field-meta.xml
<CustomField>
    <fullName>SPEN_EnergySource__c</fullName>
    <description>This field is for Connections process</description>
    <label>Energy Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advanced Fuel</fullName>
            </value>
            <value>
                <fullName>Biofuel - Anaerobic digestion</fullName>
            </value>
            <value>
                <fullName>Biofuel - Landfill gas</fullName>
            </value>
            <value>
                <fullName>Biofuel - Sewage gas</fullName>
            </value>
            <value>
                <fullName>Biofuel - Other</fullName>
            </value>
            <value>
                <fullName>Biomass</fullName>
            </value>
            <value>
                <fullName>Fossil - Brown coal/lignite</fullName>
            </value>
            <value>
                <fullName>Fossil - Coal gas</fullName>
            </value>
            <value>
                <fullName>Fossil - Gas</fullName>
            </value>
            <value>
                <fullName>Fossil - Hard coal</fullName>
            </value>
            <value>
                <fullName>Fossil - Oil</fullName>
            </value>
            <value>
                <fullName>Fossil - Oil shale</fullName>
            </value>
            <value>
                <fullName>Fossil - Peat</fullName>
            </value>
            <value>
                <fullName>Fossil - Other</fullName>
            </value>
            <value>
                <fullName>Geothermal</fullName>
            </value>
            <value>
                <fullName>Hydrogen</fullName>
            </value>
            <value>
                <fullName>Nuclear</fullName>
            </value>
            <value>
                <fullName>Solar</fullName>
            </value>
            <value>
                <fullName>Stored Energy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>