force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_EVChargerQuantity__c.field-meta.xml
<CustomField>
    <fullName>SPEN_EVChargerQuantity__c</fullName>
    <description>This field is for Connections process</description>
    <label>EV Charger Quantity</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>