force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_EVChargingType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_EVChargingType__c</fullName>
    <description>This field is for Connections process</description>
    <label>EV Charging Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>None</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Slow (Up to 4KW / 16A)</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Fast (Up to 8KW / 32A)</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>Over 8KW / 32A</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>Don&apos;t know</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>