force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_EVtoGrid__c.field-meta.xml
<CustomField>
    <fullName>SPEN_EVtoGrid__c</fullName>
    <description>This field is for Connections process</description>
    <label>EV to Grid</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>No</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Don&apos;t know</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>