force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_FuelType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_FuelType__c</fullName>
    <description>This field is for connection process</description>
    <label>Fuel Type</label>
    <length>2</length>
    <type>Text</type>
</CustomField>