force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_FutureEarthType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_FutureEarthType__c</fullName>
    <description>This field is for Connections process</description>
    <label>Future Earth Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Protective Multiple Earth</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Separate Neutral Earth</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>No Earth</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>Existing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>