force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_GenerationRatingkW__c.field-meta.xml
<CustomField>
    <fullName>SPEN_GenerationRatingkW__c</fullName>
    <description>This field is for Connections process</description>
    <label>Generation Rating (kW)</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>