force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_HeatingMethod__c.field-meta.xml
<CustomField>
    <fullName>SPEN_HeatingMethod__c</fullName>
    <description>This field is for Connections process</description>
    <label>Heating Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Electric Heating</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>No Heating</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Non-Electric Heating</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>