force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_HeatingTypeDescription__c.field-meta.xml
<CustomField>
    <fullName>SPEN_HeatingTypeDescription__c</fullName>
    <description>This field is for Connections Process</description>
    <label>Heating Type Description</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SPEN_HeatingMethod__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>37</fullName>
                <label>CIC</label>
            </value>
            <value>
                <fullName>38</fullName>
                <label>DISC</label>
            </value>
            <value>
                <fullName>39</fullName>
                <label>Dom LV Net- Whole Current- HH Aggregated-SPD-DO/MX-2</label>
            </value>
            <value>
                <fullName>44</fullName>
                <label>Dom LV Net- Whole Current- HH Aggregated-SPM-DO/MX-2</label>
            </value>
            <value>
                <fullName>32</fullName>
                <label>Dom Two rate E7 standard credit NHH-SPM-DO/MX-1</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Dom Two rate WHITE METER 1,Credit NHH-SPD-DO/MX-1</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Dom Unrestricted CPC general credit NHH-SPD-DO/MX-1</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Dom Unrestricted single rate credit NHH-SPD-DO/MX-1</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Dom Unrestricted single rate credit NHH-SPD-DO/MX-2</label>
            </value>
            <value>
                <fullName>34</fullName>
                <label>Dom Unrestricted single rate credit NHH-SPM-DO/MX-2</label>
            </value>
            <value>
                <fullName>36</fullName>
                <label>EHV-SiteSpecific-Form Req-SPD/SPM-DO/CO/MX-2</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>HH CT Metered HV Net Import-SPD-CO/MX-2</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>HH CT Metered HV Net Import-SPD-DO-2</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>HH CT Metered HV Net Import-SPM-CO/MX-2</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>HH CT Metered HV Net Import-SPM-DO-2</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>HH CT Metered LV Net Import-SPD-CO/MX-2</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>HH CT Metered LV Net Import-SPD-DO-2</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>HH CT Metered LV Net Import-SPM-CO/MX-2</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>HH CT Metered LV Net Import-SPM-DO-2</label>
            </value>
            <value>
                <fullName>35</fullName>
                <label>HH CT Metered LV Sub Import-SPD-DO/CO/MX-2</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>HH CT Metered LV Sub Import-SPM-CO/MX-2</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>HH CT Metered LV Sub Import-SPM-DO-2</label>
            </value>
            <value>
                <fullName>40</fullName>
                <label>Non Dom LV Net-HH Whole Current metered-SPD-CO/MX-2</label>
            </value>
            <value>
                <fullName>45</fullName>
                <label>Non Dom LV Net-HH Whole Current metered-SPM-CO/MX-2</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>SmII Non Dom Unrstd 1 rate credit LV net-SPD-CO/MX-2</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>SmII Non Dom Unrstd 1 rate credit LV net-SPM-CO/MX-2</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>SmII Non Dom UR Two rate DAY/NIGHT-SPD-CO/MX-1</label>
            </value>
            <value>
                <fullName>55</fullName>
                <label>SmII Non Dom UR Two Rate DAY/NIGHT-SPD-DO/CO-3</label>
            </value>
            <value>
                <fullName>57</fullName>
                <label>Smll Biz UR two rate E7 credit LV net-SPM-DO/CO-3</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>Smll Biz UR two rate E7 credit LV net-SPM-MX-1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>