force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_HouseNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_HouseNumber__c</fullName>
    <description>This field is for Connections process.</description>
    <label>House Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>