force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_IDREQTOBEDISCON__c.field-meta.xml
<CustomField>
    <fullName>SPEN_IDREQTOBEDISCON__c</fullName>
    <description>This field is for Connections Process.</description>
    <label>ID REQ TO BE DISCON</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>D</fullName>
                <label>Disconnected</label>
            </value>
            <value>
                <fullName>Null</fullName>
                <default>true</default>
                <label>No Disconnected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>