force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_IsPremiseVacant__c.field-meta.xml
<CustomField>
    <fullName>SPEN_IsPremiseVacant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is for connection process</description>
    <label>Is Premise Vacant</label>
    <type>Checkbox</type>
</CustomField>