force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_IsSameAddress__c.field-meta.xml
<CustomField>
    <fullName>SPEN_IsSameAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is for connection process</description>
    <label>Is Same Address</label>
    <type>Checkbox</type>
</CustomField>