force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_LastinRange__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LastinRange__c</fullName>
    <description>Created for Connections</description>
    <label>Last in Range</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>