force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_Locality__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Locality__c</fullName>
    <description>This field is for Connections process.</description>
    <label>Locality</label>
    <length>60</length>
    <type>Text</type>
</CustomField>