force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_ManuallyEnterPlotNumbers__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ManuallyEnterPlotNumbers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is for Connections purpose</description>
    <label>Manually Enter Plot Numbers</label>
    <type>Checkbox</type>
</CustomField>