force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_MaxPowerkVA__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MaxPowerkVA__c</fullName>
    <description>This field is for Connections process</description>
    <label>Max Power (kVA)</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>