force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_MeteringPointClass__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MeteringPointClass__c</fullName>
    <description>This field is for Connections process.</description>
    <label>Metering Point Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PS-UPUNTSUM</fullName>
                <default>true</default>
                <label>Metering Point</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>