force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_MeteringPointProfile__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MeteringPointProfile__c</fullName>
    <description>This field is for Connections process.</description>
    <label>Metering Point Profile</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UPS00001</fullName>
                <label>Plot</label>
            </value>
            <value>
                <fullName>UPS00002</fullName>
                <label>Un-metered Supplier</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>