force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_MPAN2__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MPAN2__c</fullName>
    <description>This field is for Connections process.</description>
    <label>MPAN2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>