force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_MPClass__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MPClass__c</fullName>
    <description>This field is for Connections process</description>
    <label>MP Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UPUNTSUM</fullName>
                <label>Metering Point</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>